{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 32,
  "lineage": "6788767b-8926-7849-0784-782a91a0de0c",
  "resources": [
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:loadbalancer/app/alb/5ec637e048b94082",
            "arn_suffix": "app/alb/5ec637e048b94082",
            "dns_name": "alb-1856156085.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:loadbalancer/app/alb/5ec637e048b94082",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-03e9f78df6a9dc4fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d00f7becedd6262"
              },
              {
                "subnet_id": "subnet-0f703be92a687f527"
              }
            ],
            "subnets": [
              "subnet-06d00f7becedd6262",
              "subnet-0f703be92a687f527"
            ],
            "tags": {
              "Name": "Application Load Balancer"
            },
            "tags_all": {
              "Name": "Application Load Balancer"
            },
            "vpc_id": "vpc-0f9d003655673b63f",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.Compute.aws_security_group.alb_sg",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listen_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:listener/app/alb/5ec637e048b94082/8d3d115faa5fc193",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:listener/app/alb/5ec637e048b94082/8d3d115faa5fc193",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:loadbalancer/app/alb/5ec637e048b94082",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.Compute.aws_alb.alb",
            "module.Compute.aws_alb_target_group.alb_target_group",
            "module.Compute.aws_security_group.alb_sg",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056",
            "arn_suffix": "targetgroup/alb-target-group/0a6fe11341530056",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Target Group for ALB"
            },
            "tags_all": {
              "Name": "Target Group for ALB"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_tg_attachment",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056-20210530050052224800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056",
            "target_id": "i-00f6315695792ea60"
          },
          "dependencies": [
            "module.Compute.aws_alb_target_group.alb_target_group",
            "module.Compute.aws_autoscaling_group.asg",
            "module.Compute.aws_key_pair.instance_key",
            "module.Compute.aws_launch_template.asg_launch_temp",
            "module.Compute.aws_security_group.alb_sg",
            "module.Compute.aws_security_group.instance_sg",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056-20210530050052212500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:306583519397:targetgroup/alb-target-group/0a6fe11341530056",
            "target_id": "i-04458ac0900920eaf"
          },
          "dependencies": [
            "module.Compute.aws_alb_target_group.alb_target_group",
            "module.Compute.aws_autoscaling_group.asg",
            "module.Compute.aws_key_pair.instance_key",
            "module.Compute.aws_launch_template.asg_launch_temp",
            "module.Compute.aws_security_group.alb_sg",
            "module.Compute.aws_security_group.instance_sg",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ng_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c1ae6f1f375186ab",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-54-8-248.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.54.8.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:internet-gateway/igw-005a0d8db7204338f",
            "id": "igw-005a0d8db7204338f",
            "owner_id": "306583519397",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_ng",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c1ae6f1f375186ab",
            "id": "nat-056d28251aa571265",
            "network_interface_id": "eni-0c8665c32f8bfe917",
            "private_ip": "10.20.1.130",
            "public_ip": "13.54.8.248",
            "subnet_id": "subnet-0f703be92a687f527",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.Network.aws_eip.ng_eip",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:route-table/rtb-033e2a8355a0f5cb7",
            "id": "rtb-033e2a8355a0f5cb7",
            "owner_id": "306583519397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-056d28251aa571265",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_eip.ng_eip",
            "module.Network.aws_nat_gateway.vpc_ng",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:route-table/rtb-049b72a0e0ccd55d6",
            "id": "rtb-049b72a0e0ccd55d6",
            "owner_id": "306583519397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005a0d8db7204338f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.vpc_igw",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0407fb8dcfa75719f",
            "route_table_id": "rtb-033e2a8355a0f5cb7",
            "subnet_id": "subnet-09598845e7c213e40"
          },
          "dependencies": [
            "module.Network.aws_eip.ng_eip",
            "module.Network.aws_nat_gateway.vpc_ng",
            "module.Network.aws_route_table.private_rt",
            "module.Network.aws_subnet.private_sb",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0398272f3ef68361b",
            "route_table_id": "rtb-033e2a8355a0f5cb7",
            "subnet_id": "subnet-03805ebc88e4d3b88"
          },
          "dependencies": [
            "module.Network.aws_eip.ng_eip",
            "module.Network.aws_nat_gateway.vpc_ng",
            "module.Network.aws_route_table.private_rt",
            "module.Network.aws_subnet.private_sb",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc58061d98d655e3",
            "route_table_id": "rtb-049b72a0e0ccd55d6",
            "subnet_id": "subnet-0f703be92a687f527"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.vpc_igw",
            "module.Network.aws_route_table.public_rt",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c06ab9d78d4d3b",
            "route_table_id": "rtb-049b72a0e0ccd55d6",
            "subnet_id": "subnet-06d00f7becedd6262"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.vpc_igw",
            "module.Network.aws_route_table.public_rt",
            "module.Network.aws_subnet.public_sb",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:security-group/sg-03e9f78df6a9dc4fe",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e9f78df6a9dc4fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "306583519397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:security-group/sg-0e624de797f8cb34a",
            "description": "ASG launch config SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e624de797f8cb34a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e9f78df6a9dc4fe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ASG_instance_sg",
            "name_prefix": "",
            "owner_id": "306583519397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance SG"
            },
            "tags_all": {
              "Name": "instance SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Compute.aws_security_group.alb_sg",
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:security-group/sg-015f31d23a82bf2f7",
            "description": "rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015f31d23a82bf2f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "306583519397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS SG"
            },
            "tags_all": {
              "Name": "RDS SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:subnet/subnet-09598845e7c213e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.20.11.0/24",
            "id": "subnet-09598845e7c213e40",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306583519397",
            "tags": {
              "Name": "private_sb1"
            },
            "tags_all": {
              "Name": "private_sb1"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:subnet/subnet-03805ebc88e4d3b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.20.12.0/24",
            "id": "subnet-03805ebc88e4d3b88",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306583519397",
            "tags": {
              "Name": "private_sb2"
            },
            "tags_all": {
              "Name": "private_sb2"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:subnet/subnet-0f703be92a687f527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0f703be92a687f527",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306583519397",
            "tags": {
              "Name": "public_sb1"
            },
            "tags_all": {
              "Name": "public_sb1"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:subnet/subnet-06d00f7becedd6262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-06d00f7becedd6262",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306583519397",
            "tags": {
              "Name": "public_sb2"
            },
            "tags_all": {
              "Name": "public_sb2"
            },
            "vpc_id": "vpc-0f9d003655673b63f"
          },
          "dependencies": [
            "module.Network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:306583519397:vpc/vpc-0f9d003655673b63f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-078a5304fe65e654e",
            "default_route_table_id": "rtb-08922a227e91b268d",
            "default_security_group_id": "sg-0b76d6e83f80b7829",
            "dhcp_options_id": "dopt-d82d3cbf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f9d003655673b63f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08922a227e91b268d",
            "owner_id": "306583519397",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}